Changes to reflect some of my personal projects environments

--- a/apache2/Dockerfile
+++ b/apache2/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Eric Pfeiffer <computerfr33k@users.noreply.github.com>
 
 ARG PHP_UPSTREAM_CONTAINER=php-fpm
 ARG PHP_UPSTREAM_PORT=9000
-ARG PHP_UPSTREAM_TIMEOUT=60
+ARG PHP_UPSTREAM_TIMEOUT=300
 
 ENV WEB_PHP_SOCKET=${PHP_UPSTREAM_CONTAINER}:${PHP_UPSTREAM_PORT}
 
