--- a/php-fpm/Dockerfile-70
+++ b/php-fpm/Dockerfile-70
@@ -338,6 +338,8 @@ ADD ./laravel.ini /usr/local/etc/php/conf.d/
 ADD ./xlaravel.pool.conf /usr/local/etc/php-fpm.d/
 
 #RUN rm -r /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libc-client-dev libkrb5-dev && rm -r /var/lib/apt/lists/*
+RUN docker-php-ext-configure imap --with-kerberos --with-imap-ssl && docker-php-ext-install imap
 
 RUN usermod -u 1000 www-data
 
