--- a/apache2/sites/default.conf
+++ b/apache2/sites/default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName laradock.dev
+  ServerName thiagoelias.dev
   DocumentRoot /var/www/
   Options Indexes FollowSymLinks
 
