--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
 
     applications:
       image: tianon/true
+      volumes:
+        - ${APPLICATION}:/var/www:cached
 
 ### Workspace Utilities Container ###########################
 
@@ -16,8 +18,6 @@ services:
           - INSTALL_XDEBUG=${WORKSPACE_INSTALL_XDEBUG}
           - INSTALL_BLACKFIRE=${INSTALL_BLACKFIRE}
           - INSTALL_SOAP=${WORKSPACE_INSTALL_SOAP}
-          - INSTALL_LDAP=${WORKSPACE_INSTALL_LDAP}
-          - INSTALL_IMAP=${WORKSPACE_INSTALL_IMAP}
           - INSTALL_MONGO=${WORKSPACE_INSTALL_MONGO}
           - INSTALL_PHPREDIS=${WORKSPACE_INSTALL_PHPREDIS}
           - INSTALL_MSSQL=${WORKSPACE_INSTALL_MSSQL}
@@ -39,11 +39,8 @@ services:
           - INSTALL_IMAGE_OPTIMIZERS=${WORKSPACE_INSTALL_IMAGE_OPTIMIZERS}
           - INSTALL_IMAGEMAGICK=${WORKSPACE_INSTALL_IMAGEMAGICK}
           - INSTALL_TERRAFORM=${WORKSPACE_INSTALL_TERRAFORM}
-          - INSTALL_DUSK_DEPS=${WORKSPACE_INSTALL_DUSK_DEPS}
-          - INSTALL_PG_CLIENT=${WORKSPACE_INSTALL_PG_CLIENT}
           - PUID=${WORKSPACE_PUID}
           - PGID=${WORKSPACE_PGID}
-          - CHROME_DRIVER_VERSION=${WORKSPACE_CHROME_DRIVER_VERSION}
           - NODE_VERSION=${WORKSPACE_NODE_VERSION}
           - YARN_VERSION=${WORKSPACE_YARN_VERSION}
           - TZ=${WORKSPACE_TIMEZONE}
@@ -80,8 +77,6 @@ services:
           - INSTALL_EXIF=${PHP_FPM_INSTALL_EXIF}
           - INSTALL_AEROSPIKE=${PHP_FPM_INSTALL_AEROSPIKE}
           - INSTALL_MYSQLI=${PHP_FPM_INSTALL_MYSQLI}
-          - INSTALL_PGSQL=${PHP_FPM_INSTALL_PGSQL}
-          - INSTALL_PG_CLIENT=${PHP_FPM_INSTALL_PG_CLIENT}
           - INSTALL_TOKENIZER=${PHP_FPM_INSTALL_TOKENIZER}
           - INSTALL_INTL=${PHP_FPM_INSTALL_INTL}
           - INSTALL_GHOSTSCRIPT=${PHP_FPM_INSTALL_GHOSTSCRIPT}
@@ -111,8 +106,6 @@ services:
       build:
         context: ./php-worker
         dockerfile: "Dockerfile-${PHP_VERSION}"
-        args:
-          - INSTALL_PGSQL=${PHP_WORKER_INSTALL_PGSQL}
       volumes_from:
         - applications
       depends_on:
@@ -483,7 +476,7 @@ services:
       ports:
         - "5050:5050"
       volumes:
-        - ${DATA_SAVE_PATH}/pgadmin-backup:/var/lib/pgadmin/storage/pgadmin4
+        - ${DATA_SAVE_PATH}/pgadmin-backup:/var/lib/pgadmin4/data/storage/pgadmin4
       depends_on:
         - postgres
       networks:
@@ -550,17 +543,6 @@ services:
       ports:
         - "1025:1025"
         - "8025:8025"
-      networks:
-        - frontend
-        - backend
-
-### MailDev Container #######################################
-
-    maildev:
-      build: ./maildev
-      ports:
-        - "${MAILDEV_HTTP_PORT}:80"
-        - "${MAILDEV_SMTP_PORT}:25"
       networks:
         - frontend
         - backend
@@ -641,18 +623,6 @@ services:
         - /var/run/docker.sock:/var/run/docker.sock
       networks:
         - frontend
-        - backend
-
-### Grafana Container #########################################
-
-    grafana:
-      build:
-        context: ./grafana
-      volumes:
-        - ${DATA_SAVE_PATH}/grafana:/var/lib/grafana
-      ports:
-        - "${GRAFANA_PORT}:3000"
-      networks:
         - backend
 
 ### Laravel Echo Server #######################################
