--- a/php-fpm/laravel.ini
+++ b/php-fpm/laravel.ini
@@ -1,5 +1,5 @@
 date.timezone=UTC
-display_errors=Off
+display_errors=On
 log_errors=On
 
 ; Maximum amount of memory a script may consume (128MB)
@@ -11,3 +11,5 @@ upload_max_filesize = 20M
 ; Sets max size of post data allowed.
 ; http://php.net/post-max-size
 post_max_size = 20M
+set_timeout_limit = 300
+extension=imap.so
