--- a/workspace/Dockerfile-70
+++ b/workspace/Dockerfile-70
@@ -680,6 +680,13 @@ RUN if [ ${INSTALL_DUSK_DEPS} = true ]; then \
 #--------------------------------------------------------------------------
 #
 
+#RUN apt-get update && apt-get install -y libc-client-dev libkrb5-dev && rm -r /var/lib/apt/lists/*
+#RUN docker-php-ext-configure imap --with-kerberos --with-imap-ssl && docker-php-ext-install imap
+RUN apt-get -y install php7.0-imap
+RUN apt-get -y install zbar-tools
+RUN apt-get -y install imagemagick
+RUN apt-get -y install tesseract-ocr tesseract-ocr-por tesseract-ocr-eng
+
 # Clean up
 USER root
 RUN apt-get clean && \
